2007-11-14  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/id3demux/id3tags.c:
	* gst/id3demux/id3tags.h:
	* gst/id3demux/id3v2frames.c: (id3v2_tag_to_taglist):
	  We don't want the same string multiple times in a tag list for the
	  same tag ever, for any tag, not just for GST_TAG_GENRE, so make sure
	  this doesn't happen and remove special-case code for GST_TAG_GENRE.

2007-11-14  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/taglib/gstid3v2mux.cc: (add_musicbrainz_tag), (add_funcs):
	  Write GST_TAG_MUSICBRAINZ_DISCID and GST_TAG_CDDA_CDDB_DISCID
	  into ID3v2 TXXX frames (fixes #347848).

2007-11-14  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_open):
	  Don't leak sdp message contents (fixes #496773).

	* gst/udp/gstudpsink.c: (gst_udpsink_finalize):
	  Don't leak URI string.

2007-11-14  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Julien Puydt <julien dot puydt at laposte net>

	* ext/raw1394/Makefile.am:
	* ext/raw1394/gst1394probe.c: (gst_1394_get_guid_array),
	  (gst_1394_property_probe_get_properties),
	  (gst_1394_property_probe_probe_property),
	  (gst_1394_property_probe_needs_probe),
	  (gst_1394_property_probe_get_values),
	  (gst_1394_property_probe_interface_init),
	  (gst_1394_type_add_property_probe_interface):
	* ext/raw1394/gst1394probe.h: (GST_1394_PROBE_H):
	* ext/raw1394/gstdv1394src.c: (_do_init), (gst_dv1394src_class_init),
	  (gst_dv1394src_init), (gst_dv1394src_dispose),
	  (gst_dv1394src_set_property), (gst_dv1394src_get_property),
	  (gst_dv1394src_discover_avc_node), (gst_dv1394src_query),
	  (gst_dv1394src_update_device_name):
	* ext/raw1394/gstdv1394src.h:
	  Implement GstPropertyProbe interface and add "device-name" property,
	  so applications can use this to probe for available devices in the
	  same way they can already with v4lsrc and v4l2src (however horrible
	  this property probe interface may be). Fixes #358841.
