@@ -1,3 +1,14 @@
+2007-11-15  Edgard Lima  <edgard.lima@indt.org.br>
+
+	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_class_init),
+	(gst_v4l2src_init), (gst_v4l2src_set_property),
+	(gst_v4l2src_get_property):
+	* sys/v4l2/gstv4l2src.h:
+	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_grab_frame):
+	  Always copy buffers by default (handle safer with bugged drivers)
+	  and added a property to make it possible to use mmap effectively (no
+	  copy if possible) when application wants to. Fixes: #480557.
+
 2007-11-14  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst/id3demux/id3tags.c:
